# momentum-based-trading

./: .gitignore  main.py  pyproject.toml
momentum_based_trading/: database.py  gbm.py  jobs.py  main.py
notebooks/: 05-momentum-based-trading.ipynb  SP500.db  momentum-based-trading.ipynb
